apps/monitoring/prometheus/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: k8s
  name: prometheus-k8s
  namespace: monitoring
spec:
  ports:
  - name: web
    port: 9090
    targetPort: web
  - name: reloader
    port: 8080
    targetPort: 8080
  selector:
    app: prometheus
    prometheus: k8s
  sessionAffinity: ClientIP
